2006-01-18  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (key): more examples.

2006-01-18  Akim Demaille  <akim@epita.fr>

	Sometimes the temporary directory remains.
	Reported by Wybo Dekker.
	* util/defs.in (assert_files): New.
	* util/texi2dvi.test: Use it.
	Extend to check the local builds.
	* util/texi2dvi (aux_file_p, index_file_p, xref_file_p): Check
	that the file exists.
	(generated_files_get): Simplify according to these changes.
	(remove, cleanup): New.
	Use the latter in the cleaning trap.
	(mostly_clean): Use them.

2006-01-17  Akim Demaille  <akim@epita.fr>

	* util/texi2dvi (generated_files_get): Skip nonexistent files
	earlier.

2006-01-15  Karl Berry  <karl@gnu.org>

	* info/infodoc.c (info_internal_help_text): combine messages
	which are single sentences into one string.
	Report from Clytie Siddall, via
	http://sourceforge.net/tracker/index.php?func=detail&aid=1406541&group_id=40033&atid=426818.

	* po/POTFILES.in: add missing makeinfo/xref.c, makeinfo/float.c.
	Report from Torsten.

2006-01-09  Akim Demaille  <akim@epita.fr>

	* util/texi2dvi: set -e.
	Stop using the idiom "test && action" in favor of "if test; then
	action; fi".
	(xref_files_save): Use tar instead of cp.
	(run_makeinfo): Fix a "local" use.

2006-01-08  Loic Minier  <lool@dooz.org>  (tiny change)

	* info/display.c (display_update_one_window): systematize
	check as to whether `entry' is non-null before referring to it.
	Still some segfaults when resizing the window rapidly.

2006-01-08  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\normalturnoffactive): restore setting of
	active \ to \normalbackslash.
	(\onepageout): restore call to \normalturnoffactive.
	Otherwise, if a page break happens at the wrong time, the active
	\ will result in writing an actual \ character,
	instead of {\tt \backslashcurfont }.
	Report from Kurt.Hornik@wu-wien.ac.at, 6 Jan 2006 14:38:38 +0100.
	[test idxback-exts]

2005-12-26  Karl Berry  <karl@gnu.org>
